# monerochan-rs

./: Cargo.toml  Dockerfile.build  Dockerfile.gnark-ffi  LICENSE-APACHE  LICENSE-MIT  README.md  eval.sh  publish-all.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG-FORM.yml  FEATURE-FORM.yml
.github/actions/setup/: action.yml
.github/scripts/: pkg-checks.sh
.github/workflows/: docker-gnark.yml  docker-publish-gnark.yml  docker-publish.yml  executor-suite.yml  main.yml  patch-testing-cycles.yml  pr.yml  release-plz.yml  release.yml  suite.yml  toolchain-ec2.yml
audits/: kalos.md  rkm0959.md  sp1-v4.md
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/core/executor/: Cargo.toml
crates/core/machine/: Cargo.toml  build.rs
crates/cuda/: Cargo.toml
crates/cuda/src/: lib.rs
crates/curves/: Cargo.toml
crates/curves/src/: lib.rs  params.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: lib.rs  main.rs  program.rs
crates/helper/: Cargo.toml
crates/helper/src/: lib.rs
crates/perf/: Cargo.toml  run_s3.sh
crates/perf/src/: executor.rs  main.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: io.rs  lib.rs
crates/prover/: Cargo.toml  Makefile  TRUSTED_SETUP.md  collect.sh  release.sh  shapes.sh
crates/prover/elf/: riscv32im-succinct-zkvm-elf
crates/prover/scripts/: build_compress_vks.rs  build_groth16_bn254.rs  build_plonk_bn254.rs  build_recursion_vks.rs  fibonacci_groth16.rs  fibonacci_sweep.rs  find_maximal_shapes.rs  find_oom_shapes.rs  find_recursion_shapes.rs  find_small_shapes.rs  post_trusted_setup.rs  tendermint_sweep.rs  test_shape_fixing.rs
crates/prover/src/: build.rs  components.rs  lib.rs  shapes.rs  types.rs  utils.rs  verify.rs
crates/recursion/circuit/: Cargo.toml
crates/recursion/compiler/: Cargo.toml
crates/recursion/core/: Cargo.toml  build.rs
crates/recursion/derive/: Cargo.toml
crates/recursion/gnark-cli/: Cargo.toml
crates/recursion/gnark-cli/src/: main.rs
crates/recursion/gnark-ffi/: Cargo.toml  build.rs
crates/recursion/gnark-ffi/assets/: MONEROCHANVerifierGroth16.txt  MONEROCHANVerifierPlonk.txt
crates/recursion/gnark-ffi/go/: go.mod  main.go
crates/recursion/gnark-ffi/go/monerochan/: build.go  prove.go  sp1.go  test.go  utils.go  verify.go
crates/recursion/gnark-ffi/go/monerochan/poseidon2/: constants.go  poseidon2_babybear.go
crates/recursion/gnark-ffi/src/: groth16_bn254.rs  lib.rs  plonk_bn254.rs  proof.rs  witness.rs
crates/recursion/gnark-ffi/src/ffi/: docker.rs  native.rs
crates/sdk/: Cargo.toml  build.rs
crates/sdk/src/: artifacts.rs  client.rs  install.rs  lib.rs  proof.rs  prover.rs  utils.rs
crates/sdk/src/cpu/: mod.rs  (+3 more)
crates/stark/: Cargo.toml
crates/stark/src/: bb31_poseidon2.rs  chip.rs  opts.rs  prover.rs  septic_extension.rs  types.rs  word.rs
crates/stark/src/air/: builder.rs  extension.rs  machine.rs  public_values.rs
crates/stark/src/lookup/: builder.rs
crates/test-artifacts/: Cargo.toml  Makefile  build.rs
crates/test-artifacts/programs/: Makefile
crates/test-artifacts/src/: lib.rs
crates/verifier/: Cargo.toml
crates/verifier/guest-verify-programs/: Cargo.toml
crates/verifier/guest-verify-programs/src/: groth16_verify.rs  groth16_verify_compressed.rs  plonk_verify.rs
crates/verifier/src/: error.rs  lib.rs  tests.rs  utils.rs
crates/zkvm/entrypoint/: Cargo.toml
crates/zkvm/entrypoint/src/: lib.rs
crates/zkvm/entrypoint/src/allocators/: mod.rs
crates/zkvm/entrypoint/src/syscalls/: io.rs  mod.rs  verify.rs
crates/zkvm/lib/: Cargo.toml
crates/zkvm/lib/src/: ecdsa.rs  io.rs  lib.rs  verify.rs
crates/zkvm/lib/src/ecdsa/: affine.rs  projective.rs
examples/: Cargo.toml  testing-suite-gen.sh
examples/aggregation/program/: Cargo.toml
examples/aggregation/script/: Cargo.toml
examples/bls12381/program/: Cargo.toml
examples/bls12381/script/: Cargo.toml
examples/bn254/program/: Cargo.toml
examples/bn254/script/: Cargo.toml
examples/chess/program/: Cargo.toml
examples/chess/script/: Cargo.toml  build.rs
examples/cycle-tracking/program/: Cargo.toml
examples/cycle-tracking/script/: Cargo.toml
examples/fibonacci/program/: Cargo.toml
examples/fibonacci/script/: Cargo.toml
examples/groth16/program/: Cargo.toml
examples/groth16/script/: Cargo.toml  build.rs
examples/io/program/: Cargo.toml
examples/io/script/: Cargo.toml
monerochanup/: install  monerochanup
patch-testing/: Cargo.toml  README.md
patch-testing/RustCrypto-rsa/: Cargo.toml
patch-testing/RustCrypto-rsa/program/: Cargo.toml
patch-testing/RustCrypto-rsa/src/: lib.rs
patch-testing/bls12-381/: Cargo.toml
patch-testing/bls12-381/program/: Cargo.toml
patch-testing/bls12-381/src/: lib.rs
patch-testing/bn/: Cargo.toml
patch-testing/bn/program/: Cargo.toml
patch-testing/bn/src/: lib.rs
patch-testing/build-host/: Cargo.toml
patch-testing/curve25519-dalek/: Cargo.toml
patch-testing/curve25519-dalek-ng/: Cargo.toml
patch-testing/curve25519-dalek-ng/program/: Cargo.toml
patch-testing/curve25519-dalek-ng/src/: lib.rs
patch-testing/curve25519-dalek/program/: Cargo.toml
patch-testing/curve25519-dalek/src/: lib.rs
patch-testing/k256/: Cargo.toml
patch-testing/keccak/: Cargo.toml
patch-testing/keccak/program/: Cargo.toml
patch-testing/keccak/program/src/: main.rs
patch-testing/keccak/src/: lib.rs
patch-testing/p256/: Cargo.toml  build.rs
patch-testing/p256/program/: Cargo.toml
patch-testing/p256/src/: lib.rs
patch-testing/rustcrypto-bigint/: Cargo.toml
patch-testing/rustcrypto-bigint/program/: Cargo.toml
patch-testing/rustcrypto-bigint/src/: lib.rs
patch-testing/secp256k1/: Cargo.toml  build.rs
patch-testing/secp256k1/program-v0.29.1/: Cargo.toml
patch-testing/secp256k1/program-v0.30.0/: Cargo.toml
patch-testing/secp256k1/src/: lib.rs
patch-testing/sha/: Cargo.toml  build.rs
patch-testing/sha/program/: Cargo.toml
patch-testing/sha/src/: lib.rs
patch-testing/sp1-test/: Cargo.toml
patch-testing/sp1-test-macro/: Cargo.toml
(+409 files in other folders)
