[package]
name = "monerochan-stark"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
# monerochan
monerochan-derive = { workspace = true }
monerochan-primitives = { workspace = true }

# p3
p3-air = { workspace = true }
p3-field = { workspace = true }
p3-matrix = { workspace = true }
p3-uni-stark = { workspace = true }
p3-util = { workspace = true }
p3-challenger = { workspace = true }
p3-commit = { workspace = true }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-baby-bear = { workspace = true }
p3-dft = { workspace = true }
p3-fri = { workspace = true }
p3-merkle-tree = { workspace = true }
p3-symmetric = { workspace = true }
p3-poseidon2 = { workspace = true }

# misc
serde = { workspace = true, features = ["derive"] }
hashbrown = { version = "0.14.5", features = ["serde", "inline-more"] }
itertools = { workspace = true }
tracing = { workspace = true }
rayon-scan = "0.1.1"
arrayref = "0.3.8"
num-bigint = { version = "0.4.3", default-features = false }

strum = { version = "0.26.3", features = ["derive"] }
sysinfo = "0.30.13"
num-traits = "0.2.19"

[dev-dependencies]
monerochan-runtime = { path = "../zkvm/entrypoint" }

[lints]
workspace = true
