[package]
name = "rust_crypto_rsa"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
monerochan-runtime = { workspace = true }
monerochan = { workspace = true }
monerochan-core-executor = { workspace = true }
rand = { workspace = true }
monerochan-test = { workspace = true }
rsa = { version = "0.9.7", features = ["std", "sha2", "serde"] }

[features]
prove = []
gpu = ["monerochan/cuda"]


[build-dependencies]
monerochan-build = { workspace = true }
