[package]
name = "bn"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
monerochan-runtime = { workspace = true }
monerochan = { workspace = true }
monerochan-core-executor = { workspace = true }
rand = { workspace = true }
monerochan-test = { workspace = true }
substrate-bn = "0.6.0"

[features]
prove = []
gpu = ["monerochan/cuda"]


[build-dependencies]
monerochan-build = { workspace = true }
