[package]
name = "curve25519-dalek-ng"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
monerochan = { workspace = true }
monerochan-core-executor = { workspace = true }
curve25519-dalek-ng = { workspace = true }
monerochan-test = { workspace = true }
rand.workspace = true

[features]
prove = []
gpu = ["monerochan/cuda"]


[build-dependencies]
monerochan-build = { workspace = true }
