[package]
name = "keccack"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
monerochan-runtime = { workspace = true }
monerochan = { workspace = true }
monerochan-core-executor = { workspace = true }
tiny-keccak = { workspace = true }
rand = { workspace = true }
monerochan-test = { workspace = true }

[features]
prove = []
gpu = ["monerochan/cuda"]


[build-dependencies]
monerochan-build = { workspace = true }
