[package]
name = "sha"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
monerochan-runtime.workspace = true
monerochan.workspace = true
monerochan-core-executor.workspace = true

sha2 = { version = "0.9.9", package = "sha2" }
rand = "0.8.5"
monerochan-test.workspace = true
sha3 = "=0.10.6"

[features]
prove = []
gpu = ["monerochan/cuda"]


[build-dependencies]
monerochan-build.workspace = true
