[package]
name = "monerochan-recursion-gnark-cli"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
monerochan-recursion-gnark-ffi = { workspace = true, features = ["native"] }
clap = { version = "4.5.9", features = ["derive"] }
bincode = "1.3.3"
