[package]
name = "monerochan-recursion-gnark-ffi"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
p3-field = { workspace = true }
p3-symmetric = { workspace = true }
p3-baby-bear = { workspace = true }
monerochan-recursion-compiler = { workspace = true }
monerochan-core-machine = { workspace = true, default-features = true }
monerochan-stark = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tempfile = "3.10.1"
num-bigint = "0.4.6"
cfg-if = "1.0"
bincode = "1.3.3"
anyhow = "1.0.86"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
bindgen = "0.70.1"
cc = "1.1"
cfg-if = "1.0"

[features]
native = []

[lints]
workspace = true
