[package]
name = "monerochan-runtime"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
cfg-if = "1.0.0"
getrandom_v2 = { version = "0.2.15", features = ["custom"], package = "getrandom" }
getrandom_v3 = { version = "0.3.3" , package = "getrandom" }
rand = "0.8.5"
libm = { version = "0.2.8", optional = true }
sha2 = { version = "0.10.8" }
lazy_static = "1.5.0"

# optional
monerochan-lib = { workspace = true, optional = true }
monerochan-primitives = { workspace = true }
p3-baby-bear = { workspace = true, optional = true }
p3-field = { workspace = true, optional = true }
embedded-alloc = { version = "0.6.0", optional = true }
critical-section = { version = "1.2.0", optional = true }
blake3 = { workspace = true, optional = true }

[features]
default = ["libm", "lib"]
embedded = ["dep:embedded-alloc", "dep:critical-section"]
libm = ["dep:libm"]
lib = ["dep:monerochan-lib"]
verify = [ 
  "dep:p3-baby-bear",
  "dep:p3-field",
  "monerochan-lib/verify",
]
blake3 = ["dep:blake3"]

[lints]
workspace = true
