[package]
name = "monerochan-lib"
description = "Monero-Chan, The Open-Source Privacy Platform (OSPP)"
readme = "../../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bincode = "1.3.3"
serde = { workspace = true, features = ["derive"] }
monerochan-primitives = { workspace = true }

# ecdsa
elliptic-curve = { version = "0.13.4", optional = true, features = ["hazmat", "sec1", "ecdh"] }

[features]
default = ["ecdsa"]
ecdsa = ["dep:elliptic-curve"]
verify = []

[lints]
workspace = true
