[workspace]
[package]
name = "RustCrypto-rsa-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsa_test_verify_pkcs"
path = "bin/verify_pkcs.rs"

[dependencies]
monerochan-runtime = { path = "../../../crates/zkvm/entrypoint" }
num-bigint = "0.4.0"
rsa = { version = "=0.9.6", features = ["serde", "sha2"] }

[patch.crates-io]
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA/", tag = "patch-0.9.6-monerochan-5.0.0" }
monerochan-lib = { path = "../../../crates/zkvm/lib" }
